FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(PythonLibs REQUIRED)
FIND_PACKAGE ( PythonInterp REQUIRED )
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_SWIG_FLAGS "")
SET_PROPERTY(SOURCE iec60870.i PROPERTY CPLUSPLUS ON)
SWIG_ADD_MODULE(iec60870 python iec60870.i)
IF(WIN32)
	SWIG_LINK_LIBRARIES(iec60870 ${PYTHON_LIBRARIES} iec60870 ws2_32)
ELSE()
	SWIG_LINK_LIBRARIES(iec60870 ${PYTHON_LIBRARIES} iec60870)
ENDIF(WIN32)
EXECUTE_PROCESS ( #Finding python modules install path
		COMMAND ${PYTHON_EXECUTABLE} -c
		"import site, sys; sys.stdout.write(site.getsitepackages()[-1])"
		OUTPUT_VARIABLE PYTHON_SITE_DIR
		)
INSTALL ( FILES ${CMAKE_BINARY_DIR}/python/iec60870.py DESTINATION ${PYTHON_SITE_DIR})
INSTALL ( TARGETS _iec60870   LIBRARY DESTINATION ${PYTHON_SITE_DIR})

add_test(test_pyiec60870 ${PYTHON_EXECUTABLE} test_pyiec60870.py)
